--- a/sparkles-hello-world/docker-compose.yml
+++ b/sparkles-hello-world/docker-compose.yml
@@ -1,14 +1,12 @@
-version: "3.7"
-
+version: '3'
 services:
-
-  app_proxy:
+  web:
+    build: .
+    ports:
+      - 5000:5000
+    volumes:
+      - .:/app
     environment:
-      # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: sparkles-hello-world_server_1
-      APP_PORT: 3000
-    
-  server:
-    image: getumbrel/community-app-store-hello-world:latest
-    user: "1000:1000"
-    init: true
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+    command: flask run --host=0.0.0.0
